Update README.md
README for all tools homepage